# opslag

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: test.yml
examples/: listen.rs  myservice.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: parser.rs
src/: format.rs  lib.rs  log_poly.rs  server.rs  service_info.rs  time.rs  vec.rs  writer.rs
src/dns/: flags.rs  label.rs  mod.rs  query.rs  records.rs  reqres.rs
